--- a/assets/scss/trustpilot.css
+++ b/assets/scss/trustpilot.css
@@ -221,7 +221,7 @@
 }
 
 #truspilot-avis .slide-text {
-    padding: 10px
+    margin-top: 10px;
 }
 
 #truspilot-avis .secondary-text {
@@ -267,9 +267,10 @@
 #truspilot-avis .owl-next {
     top: 110px;
     z-index: 2;
-    width: 40px;
-    height: 40px;
-    padding: 8px;
+    width: 20px;
+    height: 20px;
+    padding: 0;
+    cursor: pointer;
     margin-top: -20px;
     position: absolute;
     border-radius: 50%;
