--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -37,6 +37,31 @@
                 border-bottom: 1px solid #000;
                 position: relative;
 
+                .right-nav {
+                    position: absolute;
+                    right: 0;
+                    top: -40px;
+
+                    #_desktop-user_info {
+                        .user-info {
+                            margin-top: 0;
+                            padding: .75rem;
+                        }
+                    }
+                    #_desktop_cart {
+                        .header {
+                            margin-top: 0;
+                            .hidden-sm-down {
+                                font-size: 12px;
+                            }
+                            .cart-products-count {
+                                font-size: 12px;
+                                ;
+                            }
+                        }
+                    }
+                }
+
                 .navigation-header {
                     display: flex;
                     width: 100%;
@@ -52,24 +77,7 @@
                         position: absolute;
                         right: 0;
                         top: -35px;
-                        #_desktop-user_info {
-                            .user-info {
-                                margin-top: 0;
-                                padding: .75rem;
-                            }
-                        }
-                        #_desktop_cart {
-                            .header {
-                                margin-top: 0;
-                                .hidden-sm-down {
-                                    font-size: 12px;
-                                }
-                                .cart-products-count {
-                                    font-size: 12px;
-                                    ;
-                                }
-                            }
-                        }
+                        
                     }
                 }
                 .header-bottom {
@@ -80,8 +88,18 @@
                     text-align: center;
 
                     .menu {
-                        ul {
+                        > ul {
                             margin-bottom: 0;
+
+                            > li {
+                                margin-right: 50px;
+                                > span {
+                                    font-family: $unna;
+                                    font-size: 20px;
+                                    text-transform: none;
+
+                                }
+                            }
                         }
                     }
                 }
