--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -239,6 +239,9 @@
         grid-gap: 60px;
         display: grid;
         text-align: center;
+        @media (max-width: 480px) {
+            grid-template-columns: repeat(1, 1fr);
+        }
         h3 {
             font-weight: 400;
             font-size: 1.3em;
